[package]
name = "openvr-driver-rs"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust bindings for creating OpenVR drivers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SpookySkeletons/openvr-driver-rs"

[lib]
crate-type = ["rlib"]

[dependencies]
openvr-driver-bindings = { path = "openvr-driver-bindings" }
driver-macros = { path = "driver-macros" }
log = "0.4"

[workspace]
members = [
    "openvr-driver-bindings",
    "driver-macros",
    "openvr-driver",
    "examples/simplehmd",
    "examples/simple_hmd_clean",
]
