[package]
name = "openvr-driver-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
once_cell = "1.19"

[build-dependencies]
bindgen = "0.69"
regex = "1.10"
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"

[features]
default = []
