[package]
name = "openvr-driver"
version = "0.1.0"
edition = "2021"
description = "High-level safe Rust bindings for OpenVR driver development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SpookySkeletons/openvr-driver-rs"

[dependencies]
# Raw FFI bindings
openvr-driver-bindings = { path = "../openvr-driver-bindings" }

# Procedural macros for derive
driver-macros = { path = "../driver-macros" }

# Core dependencies
once_cell = "1.19"
parking_lot = "0.12"
tracing = "0.1"
log = "0.4"

# For safe string handling across FFI
cxx = "1.0"

[dev-dependencies]
tracing-subscriber = "0.3"

[features]
default = []
